# cycax-parts

./: .cruft.json  .gitignore  Makefile  README.md  pyproject.toml
src/: build.py
src/cycax_parts/: __about__.py  __init__.py  build.py
src/cycax_parts/computerboards/: __init__.py  atx.py  mini_itx.py
src/cycax_parts/construction/: __init__.py  conn_cube.py
src/cycax_parts/hvac/: fan.py
src/cycax_parts/powersupplies/: __init__.py  apevia.py  meanwell.py  pc.py  silverstonetek.py
src/cycax_parts/powersupply/: __init__.py  meanwell.py  silverstonetek.py
src/examples/: build_hvac.py
